# zylch-cli

./: README.md  SETUP.md  pyproject.toml  requirements.txt  zylch
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: workflow.yml
.swarm/: memory.db
zylch_cli/: __init__.py  api_client.py  cli.py  config.py  oauth_handler.py
